// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stringify component match snapshot for Custom indentation 1`] = `
<DocumentFragment>
  <pre
    class="Stringify-root-2"
  >
    [
        {
                "foo": {
                        "bar": "buzz"
                }
        },
        null,
        1,
        "string",
        [
                "nest",
                "array"
        ]
]
  </pre>
</DocumentFragment>
`;

exports[`Stringify component match snapshot for Default 1`] = `
<DocumentFragment>
  <pre
    class="Stringify-root-1"
  >
    [
    {
        "foo": {
            "bar": "buzz"
        }
    },
    null,
    1,
    "string",
    [
        "nest",
        "array"
    ]
]
  </pre>
</DocumentFragment>
`;
